--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.4",
     "react-swiper": "^0.1.5",
     "swiper": "^11.2.8"
   },
